--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rede Acelerada</title>
+    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="style.css">
+    <!-- Firebase SDKs -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js"></script>
+</head>
+<body>
+    <div id="auth">
+        <h2>Login</h2>
+        <form id="loginForm">
+            <input type="email" id="loginEmail" placeholder="E-mail" required>
+            <input type="password" id="loginPassword" placeholder="Senha" required>
+            <button type="submit">Entrar</button>
+        </form>
+        <p>Não tem conta? <a href="#" id="showRegister">Registrar</a></p>
+    </div>
 
+    <div id="register" style="display: none;">
+        <h2>Registro</h2>
+        <form id="registerForm">
+            <input type="text" id="name" placeholder="Nome" required>
+            <input type="tel" id="phone" placeholder="Telefone" required>
+            <input type="email" id="email" placeholder="E-mail" required>
+            <input type="password" id="password" placeholder="Senha" required>
+            <input type="text" id="inviteKey" placeholder="Chave de Convite" required>
+            <button type="submit">Registrar</button>
+        </form>
+        <p>Já tem conta? <a href="#" id="showLogin">Login</a></p>
+    </div>
+
+    <div id="dashboard" style="display: none;">
+        <h2>Bem-vindo, <span id="userName"></span></h2>
+        <p>Sua Chave de Convite: <span id="inviteKeyDisplay"></span></p>
+        <button id="logoutBtn">Sair</button>
+        <h3>Contatos Desbloqueados</h3>
+        <div id="contacts"></div>
+    </div>
+
+    <script src="app.js"></script>
+</body>
+</html>
