--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js"></script>
 </head>
 <body>
-    <div id="auth">
-        <h2>Login</h2>
-        <form id="loginForm">
-            <input type="email" id="loginEmail" placeholder="E-mail" required>
-            <input type="password" id="loginPassword" placeholder="Senha" required>
-            <button type="submit">Entrar</button>
+    <div id="invite">
+        <h2>Entrar na Rede Acelerada</h2>
+        <form id="inviteForm">
+            <input type="text" id="inviteKeyInput" placeholder="Chave de Convite" required>
+            <button type="submit">Validar Chave</button>
         </form>
-        <p>Não tem conta? <a href="#" id="showRegister">Registrar</a></p>
     </div>
 
     <div id="register" style="display: none;">
@@ -29,10 +27,8 @@
             <input type="tel" id="phone" placeholder="Telefone" required>
             <input type="email" id="email" placeholder="E-mail" required>
             <input type="password" id="password" placeholder="Senha" required>
-            <input type="text" id="inviteKey" placeholder="Chave de Convite" required>
             <button type="submit">Registrar</button>
         </form>
-        <p>Já tem conta? <a href="#" id="showLogin">Login</a></p>
     </div>
 
     <div id="dashboard" style="display: none;">
@@ -41,6 +37,24 @@
         <button id="logoutBtn">Sair</button>
         <h3>Contatos Desbloqueados</h3>
         <div id="contacts"></div>
+    </div>
+
+    <div id="adminDashboard" style="display: none;">
+        <h2>Painel Admin</h2>
+        <button id="logoutBtnAdmin">Sair</button>
+        <h3>Criar Usuário</h3>
+        <form id="createUserForm">
+            <input type="text" id="adminName" placeholder="Nome" required>
+            <input type="tel" id="adminPhone" placeholder="Telefone" required>
+            <input type="email" id="adminEmail" placeholder="E-mail" required>
+            <input type="password" id="adminPassword" placeholder="Senha" required>
+            <button type="submit">Criar Usuário</button>
+        </form>
+        <div id="generatedKey" style="display: none;">
+            <p>Chave de Convite Gerada: <span id="newInviteKey"></span> <button id="copyKeyBtn">Copiar</button></p>
+        </div>
+        <h3>Lista de Usuários</h3>
+        <div id="userList"></div>
     </div>
 
     <script src="app.js"></script>
